--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     
      <div class="ti">
-        <a href="portfolio.html" style="color: rgb(174, 19, 8);">Home</a>
+        <a href="index.html" style="color: rgb(174, 19, 8);">Home</a>
         <a href="contact.html" style="color: rgb(168, 11, 11);">Contact</a>
         <a href="about.html" style="color: rgb(164, 14, 14);">About Me</a>
         <a href="education.html" style="color: rgb(165, 10, 10);">Education</a>
